--- a/employe_attrition.ipynb
+++ b/employe_attrition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oqiD-8RQMRApjFQQIWvrylXzc_6quBIY",
-      "authorship_tag": "ABX9TyOPbZd5vsFh2DGkOcxL//3I",
+      "authorship_tag": "ABX9TyOSzPI95qsMfX48RH7p+ckj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/angelozero/employee_attrition/blob/main/employe_attrition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/angelozero/machine_learning/blob/main/employe_attrition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -737,24 +737,28 @@
         "for model_name, model in best_models.items():\n",
         "    y_pred = model.predict(X_test_scaled)\n",
         "    print(f\"Model: {model_name}\")\n",
-        "    print(classification_report(y_test, y_pred))\n",
-        "    print(confusion_matrix(y_test, y_pred))"
+        "    print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+        "    print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n",
+        "    print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+        "    print(\"\\n\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OoeZiadCx5GT",
-        "outputId": "be549403-0d60-46c8-e42d-9e20f0c32650"
+        "outputId": "da62e0ae-adfb-4316-a19b-43c5e9b6f399"
       },
-      "execution_count": 46,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Model: KNN\n",
-            "              precision    recall  f1-score   support\n",
+            "Accuracy: 0.8376666666666667\n",
+            "Classification Report:\n",
+            "               precision    recall  f1-score   support\n",
             "\n",
             "           0       0.83      0.59      0.69       911\n",
             "           1       0.84      0.95      0.89      2089\n",
@@ -763,10 +767,15 @@
             "   macro avg       0.83      0.77      0.79      3000\n",
             "weighted avg       0.84      0.84      0.83      3000\n",
             "\n",
-            "[[ 534  377]\n",
+            "Confusion Matrix:\n",
+            " [[ 534  377]\n",
             " [ 110 1979]]\n",
+            "\n",
+            "\n",
             "Model: Decision Tree\n",
-            "              precision    recall  f1-score   support\n",
+            "Accuracy: 0.8503333333333334\n",
+            "Classification Report:\n",
+            "               precision    recall  f1-score   support\n",
             "\n",
             "           0       0.80      0.67      0.73       911\n",
             "           1       0.87      0.93      0.90      2089\n",
@@ -775,10 +784,15 @@
             "   macro avg       0.83      0.80      0.81      3000\n",
             "weighted avg       0.85      0.85      0.85      3000\n",
             "\n",
-            "[[ 614  297]\n",
+            "Confusion Matrix:\n",
+            " [[ 614  297]\n",
             " [ 152 1937]]\n",
+            "\n",
+            "\n",
             "Model: Naive Bayes\n",
-            "              precision    recall  f1-score   support\n",
+            "Accuracy: 0.7963333333333333\n",
+            "Classification Report:\n",
+            "               precision    recall  f1-score   support\n",
             "\n",
             "           0       0.67      0.65      0.66       911\n",
             "           1       0.85      0.86      0.85      2089\n",
@@ -787,10 +801,15 @@
             "   macro avg       0.76      0.75      0.76      3000\n",
             "weighted avg       0.79      0.80      0.80      3000\n",
             "\n",
-            "[[ 588  323]\n",
+            "Confusion Matrix:\n",
+            " [[ 588  323]\n",
             " [ 288 1801]]\n",
+            "\n",
+            "\n",
             "Model: SVM\n",
-            "              precision    recall  f1-score   support\n",
+            "Accuracy: 0.857\n",
+            "Classification Report:\n",
+            "               precision    recall  f1-score   support\n",
             "\n",
             "           0       0.87      0.62      0.72       911\n",
             "           1       0.85      0.96      0.90      2089\n",
@@ -799,8 +818,11 @@
             "   macro avg       0.86      0.79      0.81      3000\n",
             "weighted avg       0.86      0.86      0.85      3000\n",
             "\n",
-            "[[ 563  348]\n",
-            " [  81 2008]]\n"
+            "Confusion Matrix:\n",
+            " [[ 563  348]\n",
+            " [  81 2008]]\n",
+            "\n",
+            "\n"
           ]
         }
       ]
@@ -843,15 +865,6 @@
           "execution_count": 48
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WLLukzvtyWwU"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
