--- a/employe_attrition.ipynb
+++ b/employe_attrition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oqiD-8RQMRApjFQQIWvrylXzc_6quBIY",
-      "authorship_tag": "ABX9TyMH6unwOje7d3741+CQKN6x",
+      "authorship_tag": "ABX9TyN4d3jc0cQBEBQdMY8DHdRO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "dj8rm3Derf0Y"
       },
-      "execution_count": 68,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -101,9 +101,9 @@
           "height": 363
         },
         "id": "BVqQAQhMrls3",
-        "outputId": "7afd325f-bbdf-4b2d-a42e-22a300fb1487"
+        "outputId": "7d484e46-0c68-4056-bb37-7600ecac4a7d"
       },
-      "execution_count": 69,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,7 +147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9a9c6b72-8c20-4047-8c25-696c01fcd82a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-68d42c84-4069-4d5d-9d03-cc44d3f9b6d4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -315,7 +315,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a9c6b72-8c20-4047-8c25-696c01fcd82a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-68d42c84-4069-4d5d-9d03-cc44d3f9b6d4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -367,12 +367,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9a9c6b72-8c20-4047-8c25-696c01fcd82a button.colab-df-convert');\n",
+              "        document.querySelector('#df-68d42c84-4069-4d5d-9d03-cc44d3f9b6d4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9a9c6b72-8c20-4047-8c25-696c01fcd82a');\n",
+              "        const element = document.querySelector('#df-68d42c84-4069-4d5d-9d03-cc44d3f9b6d4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -392,8 +392,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ee2517e5-47db-4956-9539-410aca2c4ef6\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ee2517e5-47db-4956-9539-410aca2c4ef6')\"\n",
+              "<div id=\"df-55a8d560-3823-4098-a699-00e2286934c8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-55a8d560-3823-4098-a699-00e2286934c8')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -512,7 +512,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ee2517e5-47db-4956-9539-410aca2c4ef6 button');\n",
+              "        document.querySelector('#df-55a8d560-3823-4098-a699-00e2286934c8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -529,7 +529,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 86
         }
       ]
     },
@@ -558,7 +558,7 @@
       "metadata": {
         "id": "8KA5P5uXr0BD"
       },
-      "execution_count": 70,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -579,7 +579,7 @@
       "metadata": {
         "id": "ZLcVxAl0r-BQ"
       },
-      "execution_count": 71,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
       "metadata": {
         "id": "_x-n2FmKuzV3"
       },
-      "execution_count": 72,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -626,9 +626,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mbLUL30DC7Cq",
-        "outputId": "9a006464-a2a0-4be4-c69a-8a051b5f46e1"
+        "outputId": "27db7eb4-2035-4581-f5ae-8c89406d4f95"
       },
-      "execution_count": 73,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +661,7 @@
       "metadata": {
         "id": "9bWJ1INiDFVB"
       },
-      "execution_count": 74,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -682,7 +682,7 @@
       "metadata": {
         "id": "8TPqL3HHDPak"
       },
-      "execution_count": 75,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -704,7 +704,7 @@
       "metadata": {
         "id": "G2C_YzQcDbhU"
       },
-      "execution_count": 76,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -724,7 +724,7 @@
       "metadata": {
         "id": "QU6AFeaLsW0U"
       },
-      "execution_count": 77,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -747,7 +747,7 @@
       "metadata": {
         "id": "59JoPIgjuI3b"
       },
-      "execution_count": 78,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -780,7 +780,7 @@
       "metadata": {
         "id": "IHz3os6kvH4e"
       },
-      "execution_count": 79,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -819,7 +819,7 @@
       "metadata": {
         "id": "r-mOkWLOw6Hk"
       },
-      "execution_count": 80,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -848,9 +848,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OoeZiadCx5GT",
-        "outputId": "a7bafa4d-c985-419f-9bf2-112c2c5ee5cb"
+        "outputId": "1ee09fd5-7874-463e-bf6f-fdc47c621d30"
       },
-      "execution_count": 81,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,26 +945,30 @@
         "joblib.dump(feature_names, 'best_model_employee_feature_names.pkl')\n",
         "\n",
         "# Salvar o melhor modelo\n",
-        "joblib.dump(best_models['SVM'], 'best_model_employee_attrition.pkl')"
+        "joblib.dump(best_models['SVM'], 'best_model_employee_attrition.pkl')\n",
+        "\n",
+        "# Para teste com PyTest\n",
+        "X_encoded_columns = X_encoded.columns.tolist()\n",
+        "joblib.dump((best_models['SVM'], X_encoded_columns), 'best_model_with_columns.pkl')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qh7r8HFQx61w",
-        "outputId": "8998c045-d25a-4c9e-b235-65a58cc82c1a"
+        "outputId": "0dea1d68-f405-466a-9cd9-7811434f47ff"
       },
-      "execution_count": 82,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['best_model_employee_attrition.pkl']"
+              "['best_model_with_columns.pkl']"
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 99
         }
       ]
     }
