--- a/employe_attrition.ipynb
+++ b/employe_attrition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oqiD-8RQMRApjFQQIWvrylXzc_6quBIY",
-      "authorship_tag": "ABX9TyN4d3jc0cQBEBQdMY8DHdRO",
+      "authorship_tag": "ABX9TyMC0k60d0GPkhDMoHO6Iz9L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -971,6 +971,39 @@
           "execution_count": 99
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Resumo dos Principais Achados\n",
+        "\n",
+        "O projeto de previsão da satisfação dos funcionários revelou que o modelo de **Decision Tree** teve o melhor desempenho, com uma acurácia de **97,54%**. O **SVM** também apresentou bons resultados, com **95,07%** de acurácia. A distribuição dos dados mostrou que a maioria dos funcionários (709 de 999) estava insatisfeita, o que é preocupante. O upsampling da classe minoritária melhorou o balanceamento dos dados."
+      ],
+      "metadata": {
+        "id": "4swoSl5j384m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Análise dos Resultados e Pontos de Atenção\n",
+        "\n",
+        "Embora os resultados sejam positivos, o modelo Decision Tree pode sofrer de overfitting e requer monitoramento contínuo. Além disso, é essencial acompanhar as variáveis que afetam a satisfação dos funcionários e considerar a expansão do conjunto de dados para melhorar o modelo."
+      ],
+      "metadata": {
+        "id": "NjPDNAcY4NWC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Conclusão\n",
+        "\n",
+        "Os modelos de machine learning demonstraram eficácia na previsão da satisfação dos funcionários, oferecendo insights valiosos para a empresa. A alta taxa de insatisfação identificada exige ações proativas para melhorar o ambiente de trabalho e aumentar a retenção e produtividade dos colaboradores. O monitoramento contínuo e a adaptação são cruciais para o sucesso a longo prazo.\n"
+      ],
+      "metadata": {
+        "id": "J7_acZ-K4R4I"
+      }
     }
   ]
 }
